--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -1,48 +1,49 @@
 # site 前缀
-prefixName: 花里胡哨
+prefixName: 多元宇宙
 # site 名
 siteName: YXZ
-# 站点的favicon
+# TODO 站点的favicon
 favicon: /images/favicon.ico
-# 站点的头像
+# TODO 站点的头像
 avatar: /img/custom/avatar.jpg
 # 站点url
 url: https://yxz112660.github.io
-# 站点说明
+# TODO 站点说明
 description: 用激情来点燃你的生活,积极地面对一切!
-# 站点cdn，没有就为空 【暂用】  若是cdn为空，一些图片地址就要填完整地址了，比如之前avatar就要填https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/custom/avatar.jpg
+# TODO 站点cdn，没有就为空 【暂用】  若是cdn为空，一些图片地址就要填完整地址了，比如之前avatar就要填https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/custom/avatar.jpg
 cdn: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6
 pjax: 1
 # 1开启
 mathjax: 0
-
-notice: 空间建设ing
+# TODO 公告
+notice: 宇宙升级中............ing
+# TODO 这个是什么
 lazyloadImg: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/loader/orange.progress-bar-stripe-loader.svg
 
 menus:
   首页: { path: /, fa: fa-fort-awesome faa-shake }
-  归档: { path: /archives, fa: fa-archive faa-shake, submenus: { 
-    技术: {path: /categories/技术/, fa: fa-code }, 
-    生活: {path: /categories/生活/, fa: fa-file-text-o }, 
-    资源: {path: /categories/资源/, fa: fa-cloud-download }, 
-    随想: {path: /categories/随想/, fa: fa-commenting-o },
-    转载: {path: /categories/转载/, fa: fa-book }
+  多元传送: { path: /archives, fa: fa-archive faa-shake, submenus: {
+    代码: {path: /categories/代码/, fa: fa-code },
+    摄影: {path: /categories/摄影/, fa: fa-file-text-o },
+    旅游: {path: /categories/旅游/, fa: fa-cloud-download },
+    游戏: {path: /categories/游戏/, fa: fa-commenting-o },
+    工具: {path: /categories/工具/, fa: fa-book }
   } }
-  清单: { path: javascript:;, fa: fa-list-ul faa-vertical, submenus: { 
-    书单: {path: /tags/悦读/, fa: fa-th-list faa-bounce }, 
+  多元清单: { path: javascript:;, fa: fa-list-ul faa-vertical, submenus: {
+    书单: {path: /tags/书单/, fa: fa-th-list faa-bounce },
     番组: {path: /bangumi/, fa: fa-film faa-vertical }, 
     歌单: {path: /music/, fa: fa-headphones },
-    图集: {path: /tags/图集/, fa: fa-photo }
+    图集: {path: /tags/图集/, fa: fa-photo },
+    flag: { path: /tags/flag/, fa: fa-photo }
   } }
-  留言板: { path: /comment/, fa: fa-pencil-square-o faa-tada }
-  友人帐: { path: /links/, fa: fa-link faa-shake }
+  多元留言: { path: /comment/, fa: fa-pencil-square-o faa-tada }
+  多元联盟: { path: /links/, fa: fa-link faa-shake }
   赞赏: { path: /donate/, fa: fa-heart faa-pulse }
-  关于: { path: /, fa: fa-leaf faa-wrench , submenus: { 
+  关于: { path: /, fa: fa-leaf faa-wrench , submenus: {
     我？: {path: /about/, fa: fa-meetup}, 
     主题: {path: /theme-sakura/, fa: iconfont icon-sakura },
     Lab: {path: /lab/, fa: fa-cogs },
   } }
-  客户端: { path: /client/, fa: fa-android faa-vertical }
   RSS: { path: /atom.xml, fa: fa-rss faa-pulse }
 
 
@@ -64,7 +65,7 @@ bg:
 # 背景图片样式 空 原图效果 filter-dim 阴影 filter-grid 横条 filter-dot 点点
 bgclass: filter-dot
 
-# startdash url, title, desc img
+# TODO 就是banner下面的三个文章，待修改 startdash url, title, desc img
 startdash: 
   - {url: /theme-sakura/, title: Sakura, desc: 本站 hexo 主题, img: /img/startdash/sakura.md.png}
   - {url: http://space.bilibili.com/271849279, title: Bilibili, desc: 博主的b站视频, img: /img/startdash/bilibili.jpg}
@@ -75,36 +76,36 @@ startdash:
 # your site build time or founded date
 siteBuildingTime: 01/26/2018
 
-#social  url, img PC端配置（暂时不改）
+#social  url, img PC端配置 TODO 微信二维码待更新
 social:
-  github: {url: http://github.com/honjun, img: /img/social/github.png}
-  sina: {url: http://weibo.com/mashirozx?is_all=1, img: /img/social/sina.png}
-  wangyiyun: {url: http://weibo.com/mashirozx?is_all=1, img: /img/social/wangyiyun.png}
-  zhihu: {url: http://weibo.com/mashirozx?is_all=1, img: /img/social/zhihu.png}
-  email: {url: http://weibo.com/mashirozx?is_all=1, img: /img/social/email.svg}
+  github: {url: https://github.com/yxz112660, img: /img/social/github.png}
+  sina: {url: https://weibo.com/u/5349350067, img: /img/social/sina.png}
+  wangyiyun: {url: https://music.163.com/#/user/home?id=456015913, img: /img/social/wangyiyun.png}
+  zhihu: {url: https://www.zhihu.com/people/yxz112660, img: /img/social/zhihu.png}
+  email: {url: https://github.com/yxz112660, img: /img/social/email.svg}
   wechat: {url: /#, qrcode: /img/custom/wechat.jpg, img: /img/social/wechat.png}
   wechat2: {url: /#, qrcode: /img/custom/wechat.jpg, img: /img/social/wechat.png}
 
 #social  url, img 移动端配置
 msocial:
-  github: {url: http://github.com/honjun, fa: fa-github, color: 333}
-  weibo: {url: http://weibo.com/mashirozx?is_all=1, fa: fa-weibo, color: dd4b39}
-  qq: {url: https://wpa.qq.com/msgrd?v=3&uin=954655431&site=qq&menu=yes, fa: fa-qq, color: 25c6fe}
-
+  github: {url: https://github.com/yxz112660, fa: fa-github, color: 333}
+  weibo: {url: https://weibo.com/u/5349350067, fa: fa-weibo, color: dd4b39}
+  qq: {url: https://wpa.qq.com/msgrd?v=3&uin=1126606200&site=qq&menu=yes, fa: fa-qq, color: 25c6fe}
+# TODO 支付宝二维码、微信二维码、公众号二维码（待注册）
 donate:
   paypal: https://www.paypal.me/hojuncn
   alipay: /img/custom/donate/AliPayQR.jpg
   wechat: /img/custom/donate/WeChanQR.jpg
   wechatSQ: /img/custom/donate/WeChanSQ.jpg
 
-# 视频地址为https://cdn.jsdelivr.net/gh/honjun/hojun@1.2/Unbroken.mp4，配置如下
+# TODO 视频地址为https://cdn.jsdelivr.net/gh/honjun/hojun@1.2/Unbroken.mp4，配置如下
 movies:
   url: https://cdn.jsdelivr.net/gh/honjun/hojun@1.2
   # 多个视频用逗号隔开，随机获取。支持的格式目前已知MP4,Flv。其他的可以试下，不保证有用
   name: Unbroken.mp4
 
 aplayer: 
-  id: 2660651585
+  id: 2660651585 # 歌单id
   server: netease
   type: playlist
   fixed: true
@@ -117,9 +118,9 @@ aplayer:
 
 # Valine
 valine: true
-v_appId: GyC3NzMvd0hT9Yyd2hYIC0MN-gzGzoHsz
-v_appKey: mgOpfzbkHYqU92CV4IDlAUHQ
-
+v_appId: zloLR75GQyn0qVSD378eaIlB-gzGzoHsz
+v_appKey: F9z3KfIY3WJqvASSubgpQWiD
+# TODO 更换评论系统
 # Waline
 waline:
   enable: false
