--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -1,7 +1,7 @@
 # site 前缀
 prefixName: 多元宇宙
 # site 名
-siteName: YXZ
+siteName: yangxiaozong
 # TODO 站点的favicon
 favicon: /images/favicon.ico
 # TODO 站点的头像
